syntax = "proto3";

package manager.api.field;

option go_package = ".;field";
option java_multiple_files = true;
option java_package = "manager.api.field";

import "validate/validate.proto";

message ListFieldTypeRequest{
}

message ListFieldTypeReply{
  message Type{
    string type = 1;
    string name = 2;
  }
  repeated Type list=1;
}

message ListFieldRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1, lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at"]}];
  optional string keyword = 5;
  optional string name = 6;
  optional bool status = 7;
}

message ListFieldReply {
  message Field {
    uint32 id = 1;
    string keyword = 2;
    string type = 3;
    string name = 4;
    optional bool status = 5;
    optional string description = 6;
    uint32 createdAt = 7;
    uint32 updatedAt = 8;
  }

  uint32 total = 1;
  repeated Field list = 2;
}

message CreateFieldRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1}];
  string type = 2[(validate.rules).string = {min_len: 1}];
  string name = 3[(validate.rules).string = {min_len: 1}];
  optional string description = 4;
}

message CreateFieldReply {
  uint32 id = 1;
}

message UpdateFieldRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  string keyword = 2;
  string type = 3;
  string name = 4;
  optional bool status = 5;
  optional string description = 6;
}

message UpdateFieldReply {
}

message DeleteFieldRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteFieldReply {
}

